--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
     "inbounds": [
         {
-            "port": 8091,
+            "port": 80,
+            "listen": "0.0.0.0",
+            "listen": "::",
             "protocol": "vmess",
             "settings": {
                 "udp": false,
